# eye_tracking_aviation

./: .gitignore  CLAUDE.md  LEARN.md  README.md  pyproject.toml  run.bat  run_tests.bat
app/: config.py  controller.py  main.py
assets/: generate_placeholder.py
calibration/: aoi_editor.py  gaze_calibration.py
domain/: metrics.py  models.py  state_machine.py
storage/: calibration_store.py  session_writer.py
tests/: test_aoi.py  test_metrics.py  test_state_machine.py
ui/: calibration_wizard.py  debrief_screen.py  debug_overlay.py  main_window.py  session_screen.py
vision/: camera.py  face_tracker.py  gaze_features.py  gaze_mapper.py
