[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-tracking-aviation"
version = "0.1.0"
description = "Pilot gaze tracking and debrief MVP"
requires-python = ">=3.11"

dependencies = [
    # Computer vision
    "opencv-python>=4.10",
    "mediapipe>=0.10.30",

    # ML
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",

    # UI — pin below 6.10 which has a DLL compatibility issue on some Windows builds
    "PySide6>=6.7,<6.10",

    # Charts
    "matplotlib>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov",
]

[project.scripts]
eye-tracker = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = false
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
